# convertible

./: COPYRIGHT  LICENSE  Makefile  Setup.lhs  convertible-text.cabal  convertible.cabal
Data/: Convertible.hs
Data/Convertible/: Base.hs  Instances.hs  Text.hs  Utils.hs
Data/Convertible/Instances/: C.hs  Map.hs  Num.hs  String.hs  Text.hs  Time.hs
debian/: changelog  control  copyright  rules
testsrc/: TestInfrastructure.hs  TestMap.hs  TestNum.hs  TestTime.hs  runtests.hs
utils/: StringHelper.hs  TextSkel.hs  genCinstances.hs  genNumInstances.hs
