Name: convertible-text
Version: 0.0.0
License: LGPL
Maintainer: Michael Snoyman <michael@snoyman.com>
Author: John Goerzen, Michael Snoyman
Copyright: Copyright (c) 2009-2009 John Goerzen
license-file: COPYRIGHT
extra-source-files: COPYING, utils/genCinstances.hs
homepage: http://hackage.haskell.org/cgi-bin/hackage-scripts/package/convertible
Category: Data
synopsis: Typeclasses and instances for converting between types
Description: convertible provides a typeclass with a single function
 that is designed to help convert between different types: numeric
 values, dates and times, and the like.  The conversions perform bounds
 checking and return a pure Either value.  This means that you need
 not remember which specific function performs the conversion you
 desire.
 .
 Also included in the package are optional instances that provide
 conversion for various numeric and time types, as well as utilities
 for writing your own instances.
 .
 Finally, there is a function that will raise an exception on
 bounds-checking violation, or return a bare value otherwise,
 implemented in terms of the safer function described above.
 .
 Convertible is also used by HDBC 2.0 for handling marshalling of
 data to and from databases.
 .
 Convertible is backed by an extensive test suite and passes tests
 on GHC and Hugs.
Stability: Stable
Build-Type: Simple

Cabal-Version: >=1.2

flag buildtests
  description: Build the executable to run unit tests
  default: False

flag time_gte_113
  description: time > 1.1.3 has defined some more instances so omit them here

library
  Build-Depends: base >= 4 && < 5,
                 old-time >= 1.0.0.2 && < 1.1,
                 containers >= 0.2.0.1 && < 0.3,
                 text >= 0.5 && < 0.6,
                 bytestring >= 0.9.1.4 && < 0.10,
                 safe-failure >= 0.4 && < 0.5,
                 attempt >= 0.2.0 && < 0.3
  if flag(time_gte_113)
    Build-Depends: time>=1.1.3 && <= 1.1.4
    CPP-OPTIONS: -DTIME_GTE_113
  else
    Build-Depends: time<1.1.3

  GHC-Options: -O2 -Wall -fno-warn-orphans

  Exposed-Modules: Data.Convertible.Text,
                   Data.Convertible.Base,
                   Data.Convertible.Utils,
                   Data.Convertible.Instances,
                   Data.Convertible.Instances.C,
                   Data.Convertible.Instances.Map,
                   Data.Convertible.Instances.Num,
                   Data.Convertible.Instances.Time,
                   Data.Convertible.Instances.Text,
                   Data.Convertible.Instances.String

  --Other-Modules: Database.HDBC.Utils
  --Extensions: ExistentialQuantification, AllowOverlappingInstances,
  --    AllowUndecidableInstances
  Extensions: ExistentialQuantification, MultiParamTypeClasses,
              UndecidableInstances, FlexibleInstances,
              FlexibleContexts, TypeSynonymInstances, CPP
  
Executable runtests
   if flag(buildtests)
      Buildable: True
      Build-Depends: HUnit, QuickCheck, testpack
   else
      Buildable: False
   Main-Is: runtests.hs
   Hs-Source-Dirs: ., testsrc
   GHC-Options: -O2
   Extensions: ExistentialQuantification, MultiParamTypeClasses,
               UndecidableInstances, FlexibleInstances,
               FlexibleContexts, TypeSynonymInstances
