Name: convertible
Version: 1.0.0
License: LGPL
Maintainer: John Goerzen <jgoerzen@complete.org>
Author: John Goerzen
Copyright: Copyright (c) 2009-2009 John Goerzen
license-file: COPYRIGHT
extra-source-files: COPYING
homepage: http://software.complete.org/convertible
Category: Database
synopsis: Haskell Database Connectivity
Description: HDBC provides an abstraction layer between Haskell programs and SQL
 relational databases. This lets you write database code once, in
 Haskell, and have it work with any number of backend SQL databases
 (MySQL, Oracle, PostgreSQL, ODBC-compliant databases, etc.)
Stability: Stable
Build-Type: Simple

Cabal-Version: >=1.2

flag splitBase
  description: Choose the new smaller, split-up base package.
flag buildtests
  description: Build the executable to run unit tests
  default: False

library
  if flag(splitBase)
    Build-Depends: base>=3, old-time, time, bytestring, containers, old-locale
  else
    Build-Depends: base<3
  Build-Depends: mtl

  GHC-Options: -O2 -Wall -fno-warn-orphans

  Exposed-Modules: Data.Convertible.Base,
                   Data.Convertible.Utils,
                   Data.Convertible.Instances,
                   Data.Convertible.Instances.Map,
                   Data.Convertible.Instances.Num,
                   Data.Convertible.Instances.Time

  --Other-Modules: Database.HDBC.Utils
  --Extensions: ExistentialQuantification, AllowOverlappingInstances,
  --    AllowUndecidableInstances
  Extensions: ExistentialQuantification, MultiParamTypeClasses,
              UndecidableInstances, FlexibleInstances,
              FlexibleContexts, TypeSynonymInstances, OverlappingInstances
  
  

  
