Name: convertible
Version: 1.0.11.1
License: BSD3
Maintainer: Nicolas Wu <nicolas.wu@gmail.com>
Author: John Goerzen
Copyright: Copyright (c) 2009-2011 John Goerzen
license-file: LICENSE
extra-source-files: LICENSE, utils/genCinstances.hs,
                    Makefile,
                    testsrc/TestInfrastructure.hs,
                    testsrc/TestMap.hs,
                    testsrc/TestNum.hs,
                    testsrc/TestTime.hs
homepage: http://hackage.haskell.org/cgi-bin/hackage-scripts/package/convertible
Category: Data
synopsis: Typeclasses and instances for converting between types
Description: convertible provides a typeclass with a single function
 that is designed to help convert between different types: numeric
 values, dates and times, and the like.  The conversions perform bounds
 checking and return a pure Either value.  This means that you need
 not remember which specific function performs the conversion you
 desire.
 .
 Also included in the package are optional instances that provide
 conversion for various numeric and time types, as well as utilities
 for writing your own instances.
 .
 Finally, there is a function that will raise an exception on
 bounds-checking violation, or return a bare value otherwise,
 implemented in terms of the safer function described above.
 .
 Convertible is also used by HDBC 2.0 for handling marshalling of
 data to and from databases.
 .
 Convertible is backed by an extensive test suite and passes tests
 on GHC and Hugs.
Stability: Stable
Build-Type: Simple

Cabal-Version: >=1.8

flag splitBase
  description: Choose the new smaller, split-up base package.
flag buildtests
  description: Build the executable to run unit tests
  default: False

library
  if flag(splitBase)
    Build-Depends: base>=3 && <5, old-time, time>=1.1.2.4, bytestring, containers, old-locale
  else
    Build-Depends: base<3
  Build-Depends: mtl, text >= 0.7, Decimal >= 0.2.1, time

  GHC-Options: -O2 -Wall -fno-warn-orphans

  Exposed-Modules: Data.Convertible,
                   Data.Convertible.Base,
                   Data.Convertible.Utils,
                   Data.Convertible.Instances,
                   Data.Convertible.Instances.C,
                   Data.Convertible.Instances.Map,
                   Data.Convertible.Instances.Num,
                   Data.Convertible.Instances.Text,
                   Data.Convertible.Instances.Time

  --Other-Modules: Database.HDBC.Utils
  --Extensions: ExistentialQuantification, AllowOverlappingInstances,
  --    AllowUndecidableInstances
  Extensions: ExistentialQuantification, MultiParamTypeClasses,
              UndecidableInstances, FlexibleInstances,
              FlexibleContexts, TypeSynonymInstances, CPP

test-suite               runtests
  build-depends:         base >= 3
                       , QuickCheck >= 2.0
                       , hspec
                       , quickcheck-instances
                       , quickcheck-assertions
                       , time
                       , old-time
                       , containers
                       , convertible

  type:                  exitcode-stdio-1.0
  hs-source-dirs:        testsrc
  main-is:               runtests.hs
  ghc-options:           -Wall -O2