Name: convertible
Version: 1.1.1.0
License: BSD3
Maintainer: Janus Troelsen <ysangkok@gmail.com>
Author: John Goerzen
Copyright: Copyright (c) 2009-2011 John Goerzen
license-file: LICENSE
extra-source-files: LICENSE, utils/genCinstances.hs
homepage: http://hackage.haskell.org/package/convertible
bug-reports:  https://github.com/hdbc/convertible/issues


Category: Data
synopsis: Typeclasses and instances for converting between types
Description: convertible provides a typeclass with a single function
 that is designed to help convert between different types: numeric
 values, dates and times, and the like.  The conversions perform bounds
 checking and return a pure Either value.  This means that you need
 not remember which specific function performs the conversion you
 desire.
 .
 Also included in the package are optional instances that provide
 conversion for various numeric and time types, as well as utilities
 for writing your own instances.
 .
 Finally, there is a function that will raise an exception on
 bounds-checking violation, or return a bare value otherwise,
 implemented in terms of the safer function described above.
 .
 Convertible is also used by HDBC 2.0 for handling marshalling of
 data to and from databases.
 .
 Convertible is backed by an extensive test suite and passes tests
 on GHC and Hugs.
Stability: Stable
Build-Type: Simple

Cabal-Version: >=1.8

source-repository head
  type: git
  location: git://github.com/hdbc/convertible.git

library
  Build-Depends: base>=3 && <5,
                 old-time,
                 time>=1.1.3,
                 bytestring >= 0.10.2,
                 containers,
                 old-locale,
                 mtl,
                 text >= 0.8

  GHC-Options: -Wall -fno-warn-orphans

  Exposed-Modules: Data.Convertible,
                   Data.Convertible.Base,
                   Data.Convertible.Utils,
                   Data.Convertible.Instances,
                   Data.Convertible.Instances.C,
                   Data.Convertible.Instances.Map,
                   Data.Convertible.Instances.Num,
                   Data.Convertible.Instances.Text,
                   Data.Convertible.Instances.Time

  Extensions: ExistentialQuantification, MultiParamTypeClasses,
              UndecidableInstances, FlexibleInstances,
              FlexibleContexts, TypeSynonymInstances, CPP

test-suite runtests
   Build-Depends: base, convertible, containers, QuickCheck >= 2.8, time>=1.1.3, old-time
   Main-Is: runtests.hs
   Hs-Source-Dirs: testsrc
   GHC-Options: -Wall -Wno-orphans
   Extensions: ExistentialQuantification, MultiParamTypeClasses,
               UndecidableInstances, FlexibleInstances,
               FlexibleContexts, TypeSynonymInstances, CPP
   Other-Modules: TestNum, TestTime, TestMap
